style.css
body{
  color: #ccc;
  margin: 0;
  min-height: 100vh;
  width: 100vh;
  height: 100vh;
}

.container {
  width: 100%;
  height: 100%;
}

.content {
  position: absolute;
  top: 50%;
  left: 50%;
  padding: 10px;
  border-width: 5px;
  border-style: solid;
  background-color: rgba(0,0,0,.3);
  transform: translate3d(-50%, -50%, 0);
}

.content h1 {
  margin: 0;
  text-align: center;
  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
  font-weight: 400;
  font-size: 4vmin;
  text-transform: uppercase;
  letter-spacing: 0.1em;
}

